--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,6 +7,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <h3>This is Demo Deploy</h3>
+    <p>CI/CD Implementation Done </p>
+
     <p>Hello, world! The time on the server is @DateTime.Now</p>
     <br>
     <p>This is Web app is Developed in ASP.NET Core</p><br />
