--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,11 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <h3>This is Demo Deploy</h3>
-    <p>CI/CD Implementation Done </p>
-
+    <h3>This is Demo Deploy with CI/CD Implementation</h3>
     <p>Hello, world! The time on the server is @DateTime.Now</p>
-    <br>
     <p>This is Web app is Developed in ASP.NET Core</p><br />
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
