--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,6 +7,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <h3>This is Demo Deploy with CI/CD Implementation</h3>
-    <p>Hello, world! The time on the server is @DateTime.Now</p>
+    <p>Hello, world!</p>
+    <h2>The Current Time is @DateTime.Now</h2>
     <p>This is Web app is Developed in ASP.NET Core</p><br />
 </div>
